2000-01-05  Ben Sapp <bsapp@nua.lampf.lanl.gov>

	* io/printf.m: Add @seealso{...} to doc string.
	* io/puts.m: Likewise.
	* plot/semilogx.m: Likewise.
	* plot/semilogy.m: Likewise.
	* plot/__pltopt__.m: Likewise.
	* plot/bar.m: Likewise.
	* plot/xlabel.m: Likewise.
	* plot/grid.m: Likewise.
	* plot/shg.m: Likewise.
	* plot/title.m: Likewise.
	* plot/mesh.m: Likewise.
	* plot/__pltopt1__.m: Likewise.
	* plot/contour.m: Likewise.
	* plot/hist.m: Likewise.
	* plot/stairs.m: Likewise.
	* plot/meshgrid.m: Likewise.
	* plot/polar.m: Likewise.
	* plot/loglog.m: Likewise.
	* plot/plot.m: Likewise.
	* miscellaneous/semicolon.m: Likewise.
	* miscellaneous/menu.m: Likewise.
	* miscellaneous/etime.m: Likewise.
	* miscellaneous/texas_lotto.m: Likewise.
	* miscellaneous/comma.m: Likewise.
	* audio/lin2mu.m: Likewise.
	* audio/playaudio.m: Likewise.
	* audio/loadaudio.m: Likewise.
	* audio/saveaudio.m: Likewise.
	* audio/mu2lin.m: Likewise.
	* audio/record.m: Likewise.
	* strings/isletter.m: Likewise.
	* strings/lower.m: Likewise.
	* strings/lower.m: Likewise.
	* strings/upper.m: Likewise.
	* specfun/erfinv.m: Likewise.
	* specfun/gammai.m: Likewise.
	* specfun/log2.m: Likewise.
	* specfun/pow2.m: Likewise.
	* elfun/gcd.m: Likewise.
	* elfun/lcm.m: Likewise.
	* special-matrix/vander.m: Likewise.
	* special-matrix/sylvester_matrix.m: Likewise.
	* special-matrix/hilb.m: Likewise.
	* special-matrix/hankel.m: Likewise.
	* special-matrix/toeplitz.m: Likewise.
	* special-matrix/invhilb.m: Likewise.
	* statistics/base/std.m: Likewise.
	* statistics/base/median.m: Likewise.
	* linear-algebra/cond.m: Likewise.
	* linear-algebra/norm.m: Likewise.
	* finance/nper.m: Likewise.
	* finance/pmt.m: Likewise.
	* finance/pv.m: Likewise.
	* finance/rate.m: Likewise.
	* finance/npv.m: Likewise.
	* general/fliplr.m: Likewise.
	* general/flipud.m: Likewise.
	* general/is_scalar.m: Likewise.
	* general/rem.m: Likewise.
	* general/perror.m: Likewise.
	* general/tril.m: Likewise.